@@ -25,6 +25,7 @@ WriteMakefile(
         'ExtUtils::MakeMaker'  => '6.64',
         'Module::CoreList'     => '5',
         'Perl::Tidy'           => '20140711',
+        'PPI::HTML'            => '1.08',
         'Term::ReadKey'        => '2.32',
         'Term::ReadLine::Perl' => '1.0303',
         'Test::Compile'        => '1.2.1',
