@@ -1,6 +1,7 @@
 2015-0x-xx v0.18
 + Added scaffolding script
 + Minor improvements in documentation
++ Code coverage report with syntax highlight
 
 2015-04-24 v0.17
 + Added test coverage instructions
